css/app.css
/* ... */
.project-name {
   text-align: center;
   vertical-align: middle;
  font-family: 'Poppins', sans-serif;
    font-size: 24px;
    color: #ffffff;
    font-weight: bold;
    line-height: 110%;


}
/* end work styles*/




/* Project styles - Case studies*/
.navbar-826 {
  background-color: rgba(253, 200, 218, 1.0) !important;

}


.hero-section-projects {
    background-color: rgba(253, 200, 218, 1.0);
    background-size: cover;
    text-align: center;
    text-rendering: optimizeLegibility;
    padding: 9px;
    min-height: 400px;
    
}

.hero-project-name {
    padding-top: 7%;
    font-size: 68px;
    font-family: 'Poppins', sans-serif;
    font-weight: 800;
    letter-spacing: -2px !important;
     color: #f25a50;
    line-height: 100%;
}

.case-study-tagline {
   text-align: center;
    font-size: 22px;
    color: #09477c;
   font-family: 'Poppins', sans-serif;
    letter-spacing: 1px;
    line-height: 145%;
    font-weight: 300;
    padding-top: 10px;
}

.navbar-spotify {
  background-color: rgba(9,71,124, 1.0) !important;
}

.section-block {
  margin-top: 100px;
  margin-bottom: 100px; 
}

.last-section-block {
  margin-top: 100px;
}

.large-section-header {
  margin-top: 20px;
  margin-bottom: 20px;
  text-align: center;
  font-family: 'Poppins', sans-serif;
  color: #f25a50 ;
  font-weight: 800;
  font-size: 38px;
}

.medium-section-subheader {
  margin-top: 20px;
  margin-bottom: 10px;
  text-align: left;
  font-family: 'Poppins', sans-serif;
  color: #09477c;
  font-weight: bold;
  font-size: 23px;
  letter-spacing: 0px;


}

.small-section-body-text {
  margin-top: 0px;
  margin-bottom: 0px;
  text-align: left;
  font-family: 'Poppins', sans-serif;
  color: #09477c;
  font-size: 18px;
  font-weight: 300;
  line-height: 1.5;
  letter-spacing: 0px;


}

.paragraph-block{
  margin-top: 20px;
}

.image-project {
  width: 100%;
  margin-top: 20px;
  margin-bottom: 40px;
  padding-top: 20px;
  color: #09477c;
 font-family: 'Poppins', sans-serif;
}

.image-project-short {
  width: 100%;
  margin-top: 20px;
  margin-bottom: 0px;
  padding-top: 20px;
  color: #09477c;
 font-family: 'Poppins', sans-serif;
}


.hero-image {
  margin: 0 auto !important; 
  text-align: center;
}

.slider-block {
  margin-top: 40px;
  margin-bottom: 20px;
}

.prototype-gif {
  text-align: center; 
  margin: 0 auto !important;
   width: 100%;
  margin-top: 20px;
  padding-top: 20px;
  color: #09477c;
 font-family: 'Poppins', sans-serif;
}


.process-module {
  margin-top: 20px;
}

.process-circle {
  width: 130px !important;
  height: 130px !important;
  background:  #f25a50;
  -moz-border-radius:65px;
  -webkit-border-radius: 65px;
  border-radius: 65px;
  margin: 0 auto !important;
  text-align: center;
  padding-top: 25px;
}


.process-text {
  font-family: 'Poppins', sans-serif;
  color: white;
  font-weight: 600;
  font-size: 16px;
  letter-spacing: 1px;
  text-decoration: none; 
  text-align: center;

}

.process-text-small {
  font-weight: 400;
  font-size: 10px;
  line-height: 140%;
}

.process-margin {
  margin-bottom: 20px;
}

li {
  font-family: 'Poppins', sans-serif;
  color: #09477c;
  margin-left: 20px;
}


/* start 3 column module  */
.other-work-section{; 
  padding-bottom: 20px;
  margin-top: 100px;
}

.other-work-section-3columns {
  background-color: #09477c;
  padding-top: 10px;
  padding-bottom: 80px;
}

.other-work-section-header {
  color: #09477c !important;
  text-align: center;
 font-family: 'Poppins', sans-serif;
  font-weight: bold;
  font-size: 40px;
  margin: 0 auto !important;

}


.other-work-img {
    margin: 20px;
}
/* end 3 column module  */

/* Float */
.hvr-float {
  display: block;
  vertical-align: middle;
  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
  box-shadow: 0 0 1px transparent;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}
.hvr-float:hover, .hvr-float:focus, .hvr-float:active {
  -webkit-transform: translateY(-8px);
  transform: translateY(-8px);
}



/*Start return to top styles */
#return-to-top {
    position: fixed;
    bottom: 20px;
    right: 20px;
    background-color: rgba(0,0,0,.3);
    width: 50px;
    height: 50px;
    display: block;
    text-decoration: none;
    -webkit-border-radius: 35px;
    -moz-border-radius: 35px;
    border-radius: 35px;
    display: none;
    -webkit-transition: all 0.3s linear;
    -moz-transition: all 0.3s ease;
    -ms-transition: all 0.3s ease;
    -o-transition: all 0.3s ease;
    transition: all 0.3s ease;
    z-index: 5000;
}

#return-to-top:hover {
    background-color: rgba(0,0,0,.5);
}



/* Wiggle animation for process modules */

.wiggle {
  position: relative; 
  top: 0; 
  text-align: center;
}

.wiggle:not(:first-child) {
  margin-left: 0px; 
}
  


@-webkit-keyframes wiggle {
     from {
        top: -100px;
        opacity: 0;
        }

        to {
        top: 0px;
        opacity: 1;
        }

}

.wiggle {
      -webkit-animation-name: wiggle;
      -webkit-animation-duration: 3s;
      -webkit-animation-iteration-count: 1;
      -webkit-animation-timing-function: ease-in-out;
 
}
  

.wiggle:hover, .wiggle:focus, .wiggle:active {
  -webkit-transform: translateY(-8px);
  transform: translateY(-8px);
  opacity: 0.8;
}


.wiggle:nth-child(2){
  animation-delay: 0.1s; 
}
  

.wiggle:nth-child(3) {
  animation-delay: 0.2s; 
}
  

.wiggle:nth-child(4) {
  animation-delay: 0.3s;
}

.wiggle:nth-child(5) {
  animation-delay: 0.4s;
}
/* ... */

